# vibe-scan

./: README.md  build.gradle  gradlew.bat  settings.gradle  vibescan_full_app.html  vibescan_unified.html
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  adaptive_filter.cpp  adaptive_filter.h  vibescan_engine.cpp
app/src/main/kotlin/com/northmark/vibescan/data/: AppPrefs.kt  (+3 more)
app/src/main/res/anim/: pulse.xml
app/src/main/res/drawable/: bar_progress_blue.xml  bar_progress_coral.xml  bar_progress_green.xml  ic_business.xml  ic_email.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_lock.xml  ic_splash_icon.xml  ic_vibescan_logo.xml  pill_bg.xml
app/src/main/res/font/: outfit_bold.xml  outfit_medium.xml  outfit_regular.xml
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_signup.xml  activity_splash.xml  dialog_bearing_calc.xml  fragment_asset_detail.xml  fragment_history.xml  fragment_scan.xml  fragment_settings.xml  item_spinner.xml  item_spinner_dropdown.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  font_certs.xml  strings.xml  themes.xml
server/: .env  .env.example  package-lock.json  package.json
server/src/: index.js
server/src/db/: migrate.js  pool.js  resolveAssetId.js  schema.sql  withOrgClient.js
server/src/middleware/: auth.js  tenant.js
server/src/routes/: alerts.js  assets.js  auth.js  dashboard.js  nodes.js  readings.js
(+29 files in other folders)
